Updated lights on the box checker
Added code to make the lights on the box checker object change depending on whether the player's solution is correct or not

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,6 +167,9 @@ OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 OpenAssetsAtExit=/Game/ParticleFX/spraySystemBP.spraySystemBP
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+OpenAssetsAtExit=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001.ConveyorEnd_ConeyorEndScan_001
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Box_Bp.Box_Bp
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1039,26 +1042,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem1=/Game/ParticleFX/spraySystemBP
-MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem3=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem5=/Game/PuzzleBP/Blueprints/ALANFaces
-MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem9=/Game/ParticleFX/spraySystem
-MRUItem10=/Game/ParticleFX/sprayTestBP
-MRUItem11=/Niagara/Modules/Emitter/EmitterState
-MRUItem12=/Game/Audio/Victory_Jingle/victoryjingle_Cue
-MRUItem13=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem14=/Game/PuzzleBP/Blueprints/Cube
-MRUItem15=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem16=/Game/Audio/SwitchButtonSounds/switch1to38
-MRUItem17=/Game/Audio/Click12345/SFX_ButtonClick
-MRUItem18=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
-MRUItem19=/Game/PuzzleBP/Blueprints/ColourChanger1
+MRUItem0=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem1=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem4=/Game/ParticleFX/spraySystemBP
+MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem6=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem7=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem8=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem10=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem11=/Game/ParticleFX/spraySystem
+MRUItem12=/Game/ParticleFX/sprayTestBP
+MRUItem13=/Niagara/Modules/Emitter/EmitterState
+MRUItem14=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem15=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem16=/Game/PuzzleBP/Blueprints/Cube
+MRUItem17=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem18=/Game/Audio/Click12345/SFX_ButtonClick
+MRUItem19=/Game/Audio/Beep_Buttons/SFX_Beep_Buttons
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2533,7 +2536,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent=
 PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Tags.ComponentTags\" "
@@ -2581,18 +2584,18 @@ LevelScriptActor=
 Cube_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" "
 StaticMeshSocket="\"Object.RelativeLocation\" "
 Box_Bp_C=
-StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C="\"Object.PuzzleToLoad\" "
-ALAN_C="\"Object.ShouldSkipCommand\" "
+OutputDisplay_C=
+ALAN_C=
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 IORail2_IOconnectBox_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BoxSpawner_C="\"Object.SetToSpawn\" "
-BoxChecker_C=
+BoxChecker_C="\"Object.AllBoxesChecked\" "
 NiagaraComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
 
@@ -2824,7 +2827,7 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2929,7 +2932,7 @@ BoxComponent=
 IORail2_IOconnectCylinders_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 IORail2_IOconnectBox_001_Blueprint_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 BoxSpawner_C=
-BoxChecker_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BoxChecker_C=
 sprayTestBP_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PrimitiveComponent=
 spraySystemBP_C=
