--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2500,6 +2500,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint.IORail2_IOconnectBox_001_Blueprint=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker;
 RecentlyPlaced=/Game/Geometry/Meshes/IndustLight.IndustLight;
 RecentlyPlaced=/Game/Geometry/Meshes/RivetStamp.RivetStamp;
@@ -2519,7 +2520,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Floor.WallsPrebuilt_Floor;
 RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
 RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall.WallsPrebuilt_Wall;
 RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_Door.WallsPrebuilt_Wall_Door;
-RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Wall_View.WallsPrebuilt_Wall_View;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2575,8 +2575,8 @@ MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 NiagaraSettings="\"Object.Niagara.AdditionalParameterEnums\" \"Object.Renderer.ComponentRendererWarningsPerClass\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 MaterialEditorInstanceConstant=
-ControlPanel_C="\"Object.ButtonDelay\" "
-Pawn="\"Object.ButtonDelay\" "
+ControlPanel_C="\"Object.AcceptingInputs\" "
+Pawn="\"Object.AcceptingInputs\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 GameEnvironment_C=
@@ -2595,7 +2595,7 @@ TextRenderComponent="\"Object.Tags.ComponentTags\" "
 IORail2_IOconnectCylinders_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 IORail2_IOconnectBox_001_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BoxSpawner_C="\"Object.SetToSpawn\" "
-BoxChecker_C="\"Object.AllBoxesChecked\" "
+BoxChecker_C=
 NiagaraComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
 
@@ -2827,7 +2827,7 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=
 ControlPanel_C=
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2904,7 +2904,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+SceneComponent=
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
